# docs/web/api/openapi.yaml
@@ -53,6 +53,13 @@ components:
           description: Link to the next page
           type: string
       type: object
+    Ban:
+      properties:
+        data:
+          $ref: '#/components/schemas/Ban_data'
+      required:
+      - data
+      type: object
     User_data_attributes:
       properties:
         username:
@@ -144,6 +151,38 @@ components:
           type: string
         attributes:
           $ref: '#/components/schemas/UserUpdate_data_attributes'
+      required:
+      - attributes
+      - id
+      - type
+      type: object
+    Ban_data_attributes:
+      properties:
+        term:
+          description: ban period at days
+          type: integer
+        sort:
+          description: type of block
+          type: string
+        desc:
+          description: reason for ban and explanation
+          type: string
+      required:
+      - desc
+      - sort
+      - term
+      type: object
+    Ban_data:
+      properties:
+        id:
+          description: user id
+          type: string
+        type:
+          enum:
+          - ban
+          type: string
+        attributes:
+          $ref: '#/components/schemas/Ban_data_attributes'
       required:
       - attributes
       - id
