# resources/model_ban_data.go
@@ -1,0 +1,215 @@
+/*
+Cifra SSO REST API
+
+SSO REST API for Cifra app
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the BanData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &BanData{}
+
+// BanData struct for BanData
+type BanData struct {
+	// user id
+	Id string `json:"id"`
+	Type string `json:"type"`
+	Attributes BanDataAttributes `json:"attributes"`
+}
+
+type _BanData BanData
+
+// NewBanData instantiates a new BanData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewBanData(id string, type_ string, attributes BanDataAttributes) *BanData {
+	this := BanData{}
+	this.Id = id
+	this.Type = type_
+	this.Attributes = attributes
+	return &this
+}
+
+// NewBanDataWithDefaults instantiates a new BanData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewBanDataWithDefaults() *BanData {
+	this := BanData{}
+	return &this
+}
+
+// GetId returns the Id field value
+func (o *BanData) GetId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value
+// and a boolean to check if the value has been set.
+func (o *BanData) GetIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Id, true
+}
+
+// SetId sets field value
+func (o *BanData) SetId(v string) {
+	o.Id = v
+}
+
+// GetType returns the Type field value
+func (o *BanData) GetType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Type
+}
+
+// GetTypeOk returns a tuple with the Type field value
+// and a boolean to check if the value has been set.
+func (o *BanData) GetTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Type, true
+}
+
+// SetType sets field value
+func (o *BanData) SetType(v string) {
+	o.Type = v
+}
+
+// GetAttributes returns the Attributes field value
+func (o *BanData) GetAttributes() BanDataAttributes {
+	if o == nil {
+		var ret BanDataAttributes
+		return ret
+	}
+
+	return o.Attributes
+}
+
+// GetAttributesOk returns a tuple with the Attributes field value
+// and a boolean to check if the value has been set.
+func (o *BanData) GetAttributesOk() (*BanDataAttributes, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Attributes, true
+}
+
+// SetAttributes sets field value
+func (o *BanData) SetAttributes(v BanDataAttributes) {
+	o.Attributes = v
+}
+
+func (o BanData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o BanData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["id"] = o.Id
+	toSerialize["type"] = o.Type
+	toSerialize["attributes"] = o.Attributes
+	return toSerialize, nil
+}
+
+func (o *BanData) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"id",
+		"type",
+		"attributes",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varBanData := _BanData{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varBanData)
+
+	if err != nil {
+		return err
+	}
+
+	*o = BanData(varBanData)
+
+	return err
+}
+
+type NullableBanData struct {
+	value *BanData
+	isSet bool
+}
+
+func (v NullableBanData) Get() *BanData {
+	return v.value
+}
+
+func (v *NullableBanData) Set(val *BanData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableBanData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableBanData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableBanData(val *BanData) *NullableBanData {
+	return &NullableBanData{value: val, isSet: true}
+}
+
+func (v NullableBanData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableBanData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
